# sf

./: .gitignore  CMakeLists.txt  misc.txt
src/: main.cpp  stuff.cpp
src/selfup/: ns_filesys.cpp  ns_filesys.h  ns_helpers.cpp  ns_helpers.h
